2005-06-14  Alex Roitman  <shura@gramps-project.org>
	* src/events.png, src/repos.png, src/repos24.png: Add GNOME icons
	for the stock calendar and drawer.
	* src/events24.png: Update small icon.
	* src/gramps.glade: Use new icons for the Event View and
	Repository View side bar buttons. Add small icons to the main
	notebook tabs.

2005-06-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditPerson.py: Make gender guessing work again

2005-06-08  Alex Roitman  <shura@gramps-project.org>
	* src/gramps_main.py (init_interface): Set proper color for new icons.
	* src/gramps.glade (gramps): Label new buttons, left-align labels.
	* src/GrampsDbBase.py (get_event_column_order): Show date column.
	* src/EventView.py (Module): Add "Last Changed" column; do not
	hard-code handle column.
	* src/DisplayModels.py (EventModel.__init__): Switch column order.

	* src/EventView.py (Module): Remove extra column.
	* src/EventEdit.py (EventEditor.__init__): Remove obsolete code.
	
	* src/gramps.glade (Marriage): Re-work dialog similar to EditPerson.
	* src/Utils.py (family_event_roles): Add mapping.
	* src/RelLib.py (EventRef): Add FAMILY role.
	* src/Marriage.py: Start using Listbox, so far for Events only.
	* src/ListBox.py: Support both person and family primaries.
	* src/EventEdit.py: Support both person and family primaries.
	* src/EditPerson.py (on_apply_person_clicked): Do not commit
	event, as this is done in the editor.

	* src/EditPerson.py: Commit events, since there may be changes
	made no in the editor.
	* src/EventEdit.py: Use combined mapping for all events.
	* src/FamilyView.py: Proper display of child relations.
	* src/Marriage.py: Commit events; properly call common event/ref
	editor. 
	* src/Utils.py: Minor.
	* src/gramps.glade: Minor update.

	* src/AutoComp.py (StandardCustomSelector.__init__): Compare
	active_key to None.
	* src/gramps.glade (marriageDialog): Remove displayed strings from
	the Sttributes tab.